--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,51 @@
+# Nome do Workflow
 name: Deploy Códice to GitHub Pages
+
+# Gatilho: Roda quando houver um push na branch 'main'
 on:
   push:
     branches:
       - main
 
+# Permissões necessárias para o workflow publicar no GitHub Pages
 permissions:
   contents: write
 
 jobs:
   build-and-deploy:
+    # O tipo de máquina que o workflow vai usar
     runs-on: ubuntu-latest
+    
     steps:
+      # 1. Baixa o código do seu repositório para a máquina virtual
       - name: Checkout code
         uses: actions/checkout@v4
+
+      # 2. Configura o ambiente Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
+          # CORREÇÃO: Especifica onde o arquivo de cache de dependências está localizado
+          cache-dependency-path: story-view/package-lock.json
+
+      # 3. Instala as dependências do projeto
       - name: Install dependencies
+        # CORREÇÃO: Executa o comando dentro da pasta 'story-view'
         run: npm install
+        working-directory: ./story-view
+
+      # 4. Executa o script de build para gerar o db.json
       - name: Build project
+        # CORREÇÃO: Executa o comando dentro da pasta 'story-view'
         run: npm run build
+        working-directory: ./story-view
+
+      # 5. Publica o conteúdo final no GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
-
+          # CORREÇÃO: Especifica que o conteúdo a ser publicado está na pasta 'story-view'
+          publish_dir: ./story-view
