--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,18 @@
 # Nome do Workflow
 name: Deploy Códice to GitHub Pages
 
-# Gatilho: Roda quando houver um push na branch 'main'
 on:
   push:
     branches:
       - main
 
-# Permissões necessárias para o workflow publicar no GitHub Pages
 permissions:
   contents: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     defaults:
       run:
         working-directory: ./story-view
@@ -48,3 +46,12 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./story-view/dist
+
+      - name: Copia db.json para a branch main
+        run: |
+          cp dist/db.json ./db.json
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add db.json
+          git commit -m "Atualiza db.json gerado automaticamente" || echo "Nada para commitar"
+          git push origin main
