--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./story-view
+          publish_dir: ./
           # --- SOLUÇÃO DE CACHE ---
           # force_orphan: true -> Cria uma branch de deploy limpa, sem histórico antigo.
           # keep_files: false -> Garante que o diretório de destino seja limpo antes do deploy.
