--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,12 +39,14 @@ jobs:
           fi
 
       - name: Commit e push do db.json (se necessário)
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add story-view/dist/db.json
+        shell: bash
+        run: >
+          git config user.name "github-actions[bot]" &&
+          git config user.email "github-actions[bot]@users.noreply.github.com" &&
+          git add story-view/dist/db.json &&
           if ! git diff --cached --quiet; then
-            git commit -m "ci: atualizar db.json [skip ci]"
-            git push
+            git commit -m "ci: atualizar db.json [skip ci]" &&
+            git push;
           else
-            echo "🟡 Nenhuma mudança detectada em db.json, pulando commit."
+            echo "🟡 Nenhuma mudança detectada em db.json, pulando commit.";
+          fi
