--- a/.github/workflows/build-db.yml
+++ b/.github/workflows/build-db.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add story-view/dist/db.json
+          git add dist/db.json
           if git diff --cached --quiet; then
             echo "Sem alterações no db.json. Nada será commitado."
             exit 0
