--- a/.github/workflows/build-db.yml
+++ b/.github/workflows/build-db.yml
@@ -37,7 +37,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add dist/db.json
           if git diff --cached --quiet; then
-            echo "Sem alterações no db.json. Nada será commitado."
+            echo "Sem alterações no db.json."
             exit 0
           fi
           git commit -m "Atualizar db.json automaticamente"
